# cs2-dem-renderer

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  install-plugin.sh
.github/workflows/: deploy-viewer.yml
cs2-server-plugin/: CMakeLists.txt  cdll_interfaces.h  main.cpp
dem-render/: encode.go  go.mod  go.sum  main.go  parse.go  render.go  worker.go
viewer/: index.html
